# conception_logicielle

./: .env.template  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: github-actions.yml
backend/: .env.template  .pre-commit-config.yaml  Dockerfile  dockerfile  pyproject.toml
backend/data/: init_db.sql  pop_db.sql
backend/src/: api.py  exceptions.py
backend/src/api/: api.py
backend/src/auth/: aut_handler.py  auth_bearer.py  auth_handler.py
backend/src/business_object/: candidate_profile.py  job_offer.py  user.py  user_skill.py
backend/src/dao/: db_connection.py  job_offer_dao.py  profile_dao.py  reset_database.py  skill_dao.py  user_dao.py
backend/src/dto/: authentification_dto.py  job_dto.py  profile_dto.py  skill_dto.py
backend/src/router/: auth.py  authentication_router.py  authentification.py  job.py  profile.py  skill.py
backend/src/services/: france_travail_service.py  job_aggregation_service.py  profile_service.py  user_service.py
backend/src/tests/test_service/: test_france_travail_service.py  test_job_aggregation_service.py  test_profile_service.py  test_user_service.py
backend/src/utils/: logger.py  search_terms.py  security.py  tech_keywords.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: Accueil.jsx  Job_card.jsx  Login.jsx  (+3 more)
kubernetes/backend/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
kubernetes/frontend/: configmap.yaml  deployment.yaml  service.yaml
(+24 files in other folders)
